--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 				<div class="alert alert-danger" role="alert">
 					<%= error %>
 				</div>
-				<a class="btn btn-secondary text-white" href="/" role="button">Try agani</a>
+				<a class="btn btn-secondary text-white" href="/" role="button">Try again</a>
 			<% } %>
 			</div>
 		</div>
